--- a/src/m/scss/index.scss
+++ b/src/m/scss/index.scss
@@ -127,7 +127,9 @@ img {
 	.men-btn {
     position: absolute;
     left: 0;
-    bottom: 76px;
+		bottom: 76px;
+		width: 120px;
+		text-align: left;
 	}
 }
 
@@ -514,4 +516,144 @@ img {
       }
     }
   }
+}
+
+.s8 {
+	margin-top: 50px;
+	.title-bg {
+		top: -2px;
+		right: 0;
+	}
+	.more-btn {
+		width: 300px;
+		margin: 20px auto 0;
+		font-family: "NotoSansTC-Medium", "NotoSansTC-Regular";
+		a {
+			color: #000;
+			font-size: 28px;
+			border: 3px solid #000;
+			padding: 20px 0;
+			text-align: center;
+			background: rgba(255, 255, 255, 0.3);
+			transition: .3s;
+			&:hover {
+				color: #FFF;
+				background: #000;
+			}
+		}
+	}
+}
+
+$color_1: #003569;
+$color_2: #fff;
+.s-ig {
+	// padding: 92px 12px 0;
+	// background: #fff;
+	.Ls_normal {
+		letter-spacing: normal;
+	}
+	.ig-wrap {
+		width: 616px;
+		margin: 0 auto;
+	}
+	h2 {
+		color: #333;
+		font-size: 36px;
+		line-height: 1em;
+		letter-spacing: 4px;
+		text-align: center;
+		font-family: 'NotoSansTC-Black', "NotoSansTC-Regular";
+	}
+	p {
+		color: #333;
+		font-size: 24px;
+		line-height: 1.5em;
+		font-weight: 500;
+		text-align: center;
+		letter-spacing: 3px;
+	}
+	.ig-title {
+		h2 {
+			margin: 0 0 30px;
+		}
+		p {
+			margin-top: 10px;
+			margin-bottom: 20px;
+		}
+		a {
+			display: inline-block;
+			width: auto;
+			color: #003467;
+			// text-decoration: underline;
+		}
+	}
+	.btn {
+		border: 3px solid #000;
+		background: #fff;
+		height: 76px;
+		width: 226px;
+		text-align: center;
+		margin: 18px auto 0;
+		a {
+			width: 100%;
+			text-decoration: none;
+			line-height: 70px;
+			color: #333;
+			font-size: 24px;
+			font-weight: 500;
+			text-align: center;
+			letter-spacing: 3px;
+		}
+		&:hover {
+			background: #000;
+			p {
+				color: $color_2;
+			}
+		}
+	}
+	.swiper-container {
+		width: 100%;
+		min-height: 418px;
+		height: 418px;
+		margin-top: 38px;
+		.bg-cover {
+			background-size: contain;
+			background-position: center center;
+			background-repeat: no-repeat;
+		}
+		.swiper-button-next,
+		.swiper-button-prev {
+			width: 33px;
+			height: 59px;
+			margin-top: -30px;
+			background-size: 33px 59px;
+		}
+		.swiper-button-next {
+			background-image: url(../images/btn-right.png);
+			right: 0;
+		}
+		.swiper-button-prev {
+			background-image: url(../images/btn-left.png);
+			left: 0;
+		}
+		.swiper-pagination-bullet {
+			width: 40px;
+			height: 4px;
+			background: #000000;
+			opacity: 1;
+			display: inline-block;
+			margin: 0 5px;
+			-moz-transition: all 0.7s;
+			-o-transition: all 0.7s;
+			-webkit-transition: all 0.7s;
+			transition: all 0.7s;
+			-webkit-border-radius: 0;
+			-moz-border-radius: 0;
+			border-radius: 0;
+			display: none;
+		}
+		.swiper-pagination-bullet-active {
+			background: #c70025;
+		}
+	}
 }
