--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -534,3 +534,130 @@ img {
     }
   }
 }
+
+.s8 {
+	margin-top: 50px;
+	.title {
+		width: 620px;
+		margin: 0 auto 14px;
+	}
+	.title-bg {
+		top: -2px;
+		right: 0;
+	}
+	.more-btn {
+		margin: 25px auto 0;
+		width: 224px;
+		font-family: "NotoSansTC-Medium", "NotoSansTC-Regular";
+		a {
+			color: #000;
+			font-size: 20px;
+			border: 3px solid #000;
+			padding: 10px 0;
+			text-align: center;
+			background: rgba(255, 255, 255, 0.3);
+			transition: .3s;
+			&:hover {
+				color: #FFF;
+				background: #000;
+			}
+		}
+	}
+}
+
+$color_1: #003569;
+$color_2: #fff;
+.s-ig {
+  width: 1309px;
+  // border-top: 1px solid #d2d2d2;
+  // margin-top: 117px;
+  margin-left: auto;
+  margin-right: auto;
+	padding-bottom: 20px;
+  .Ls_normal {
+    letter-spacing: normal;
+  }
+  h2 {
+    color: #333;
+    font-size: 40px;
+    line-height: 1em;
+    letter-spacing: 4px;
+    text-align: center;
+    font-family: 'NotoSansTC-Black';
+  }
+  p {
+    color: #333;
+    font-size: 22px;
+    line-height: 28px;
+    font-weight: 500;
+    text-align: center;
+		letter-spacing: 3px;
+		a {
+			display: inline;
+		}
+  }
+  .title {
+    h2 {
+      margin: 78px 0 20px;
+    }
+    p {
+      margin-bottom: 20px;
+    }
+    a {
+      display: inline-block;
+      width: auto;
+      color: #000;
+      text-decoration: underline;
+    }
+  }
+  .btn {
+    border: 3px solid #000;
+    background: #fff;
+    padding: 7px 0;
+    height: 46px;
+    width: 150px;
+    text-align: center;
+    margin: 0px auto 0;
+    -moz-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+    -o-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+    -webkit-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+    transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+    a {
+      text-decoration: none;
+    }
+    &:hover {
+      background: #000;
+      p {
+        color: $color_2;
+      }
+    }
+  }
+  .swiper-container {
+    width: 100%;
+    height: 418px;
+    margin-top: 45px;
+    .swiper-slide {
+      max-height: 400px;
+    }
+    .bg-cover {
+      background-size: cover;
+      background-position: center center;
+    }
+    .swiper-button-next {
+      width: 33px;
+      height: 59px;
+      margin-top: -30px;
+      background-size: 33px 59px;
+      background-image: url(../images/btn-right.png);
+      right: 0;
+    }
+    .swiper-button-prev {
+      width: 33px;
+      height: 59px;
+      margin-top: -30px;
+      background-size: 33px 59px;
+      background-image: url(../images/btn-left.png);
+      left: 0;
+    }
+  }
+}
